[metadata]
name = pay_queue
url = https://github.com/bcgov/sbc-pay/
author = SBC Relationships team
author_email =
classifiers =
    Development Status :: Beta
    Intended Audience :: Developers / QA
    Topic :: Payments
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.8
license = Apache Software License Version 2.0
description = A short description of the project
long_description = file: README.md
keywords =

[options]
zip_safe = True
python_requires = >=3.12
include_package_data = True
packages = find:

[options.package_data]
pay_queue =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
ignore = B902
exclude = .git,*migrations*
max-line-length = 120
docstring-min-length=10
per-file-ignores =
    */__init__.py:F401

[pycodestyle]
max_line_length = 120
ignore = E501
docstring-min-length=10
notes=FIXME,XXX
match_dir = src/pay_queue
ignored-modules=flask_sqlalchemy
    sqlalchemy
per-file-ignores =
    */__init__.py:F401
good-names=
    b,
    d,
    i,
    e,
    f,
    k,
    u,
    v,
    ar,
    cb, #common shorthand for callback
    nc,
    rv,
    sc,
    event_loop,
    logger,
    loop,

[pylint]
ignore=migrations,test
notes=FIXME,XXX,TODO
ignored-modules=flask_sqlalchemy,sqlalchemy,SQLAlchemy,alembic,scoped_session
ignored-classes=scoped_session
disable=C0301,W0511,R0801,R0902
good-names=
    b,
    d,
    i,
    e,
    f,
    k,
    u,
    v,
    ar,
    cb, #common shorthand for callback
    nc,
    rv,
    sc,
    event_loop,
    logger,
    loop,

[isort]
line_length = 120
indent = 4
multi_line_output = 4
lines_after_imports = 2

[tool:pytest]
addopts = --cov=src --cov-report html:htmlcov --cov-report xml:coverage.xml
testpaths = tests
filterwarnings =
    ignore::UserWarning

[report:run]
exclude_lines =
    pragma: no cover
    from
    import
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
