[project]
name = "pay-report"
version = "0.1.0"
description = "Pay Report Dashboard"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "Authlib>=1.3.2",
    "cloud-sql-python-connector>=1.11.0",
    "pg8000>=1.31.0",
    "xlsxwriter>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # allow raise without specifying exception in except
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B904"]  # allow raise in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


