[tool.poetry]
name = "ftp-poller"
version = "0.1.0"
description = ""
authors = ["Travis Semple <travis8814@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^21.2.0"
flask = "^3.0.2"
flask-restplus = "^0.13.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
jsonschema = "4.17.3"
requests = "^2.31.0"
werkzeug = "^3.0.1"
pysftp = "^0.2.9"
minio = "^7.2.5"
jaeger-client = "^4.8.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.3"
protobuf = "4.25.3"
launchdarkly-server-sdk = "^8.2.1"
sbc-common-components = {git = "https://github.com/bcgov/sbc-common-components.git", subdirectory = "python"}
pay-api = {git = "https://github.com/bcgov/sbc-pay.git", subdirectory = "pay-api"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.12.0"
requests = "^2.31.0"
pyhamcrest = "^2.1.0"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
flake8-blind-except = "^0.2.1"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
flake8-quotes = "^3.4.0"
pep8-naming = "^0.13.3"
autopep8 = "^2.0.4"
coverage = "^7.4.3"
pylint = "^3.1.0"
pylint-flask = "^0.6"
lovely-pytest-docker = "^0.3.1"
pytest-asyncio = "^0.23.5.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
