[tool.poetry]
name = "notebook-report"
version = "0.1.0"
description = ""
authors = ["Travis Semple <travis8814@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
ipython-sql = "^0.5.0"
simplejson = "^3.19.3"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
spacy = "^3.8.2"
papermill = "^2.6.0"
schedule = "^1.2.2"
attrs = "^24.2.0"
df2gspread = "^1.0.4"
future = "^1.0.0"
gspread = "^6.1.4"
jinja2 = "^3.1.4"
markupsafe = "^3.0.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.2"
importlib-metadata = "^8.5.0"
itsdangerous = "^2.2.0"
jsonschema = "^4.23.0"
more-itertools = "^10.5.0"
six = "^1.17.0"
pyrsistent = "^0.20.0"
flask = "^3.1.0"
click = "^8.1.7"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
marshmallow = "^3.23.1"
werkzeug = "^3.1.3"
certifi = "^2024.8.30"
urllib3 = "^2.2.3"
idna = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
flake8-blind-except = "^0.2.1"
flake8-debugger = "^4.1.2"
flake8-docstrings = "^1.7.0"
flake8-isort = "^6.1.1"
flake8-quotes = "^3.4.0"
pep8-naming = "^0.14.1"
pylint = "^3.3.2"
pylint-flask = "^0.6"
pep8 = "^1.7.1"
autopep8 = "^2.3.1"
coverage = "^7.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
